--- a/home.html
+++ b/home.html
@@ -32,7 +32,7 @@
                 <div class="categorias" id="categorias"><i class="fa-solid fa-user"></i>
                     <ul>
                         <a href="Mis-ordenes.html"><li>Ver ordenes</li></a>
-                        <a href="index.html"><li>Volver al inicio</li></a>
+                        <a href="index.html"><li>Cerrar sesion</li></a>
                     </ul>  
                 </div>
                 <a href="carrito.html"><i class="fa-solid fa-cart-plus"></i></a>
