--- a/registrarse.html
+++ b/registrarse.html
@@ -18,7 +18,7 @@
 >
 <body>
     <div class="container">
-        <form id="login-form" class="login-form">
+        <form id="login-form" class="login-form" action="registrar.php" method="POST">
 
         <img src="img/cuenta.png">
 
@@ -28,7 +28,7 @@
             </div>
             <div class="input-group">
                 <i class="fa-solid fa-user"></i>
-                <input type="nombre" id="nombre" name="nombre" placeholder="Ingrese su Apellido" required>
+                <input type="nombre" id="nombre" name="apellido" placeholder="Ingrese su Apellido" required>
             </div>
 
 
