--- a/carrito.html
+++ b/carrito.html
@@ -26,16 +26,20 @@
                 </form>
             </div>
             <div class="links-container">
-                <a href="home.html"><span class="blanco">HOME</span></a>
+                <a href="home.php"><span class="blanco">HOME</span></a>
                 <a href="Mis-ordenes.html"><span class="blanco">Ver mis ordenes</span></a>
                 <a href="#redes-sociales"><span class="blanco">Redes</span></a>
-                <a href="#"><i class="fa-solid fa-user"></i></a>
+                <div class="categorias" id="categorias"><i class="fa-solid fa-user"></i>
+                    <ul>
+                        <a href="index.html" onclick="logout()"><li>cerrar sesion</li></a>
+                    </ul>  
+                </div>
                 <a href="carrito.html"><i class="fa-solid fa-cart-plus"></i></a>
             </div>
         </nav>
     </header>
 
- <!--EJEMPLO DE COMO DEBEN APARECER-->   
+<!--EJEMPLO DE COMO DEBEN APARECER-->   
 
 <div class="container sec-1">
         <div class="item">
