--- a/home.html
+++ b/home.html
@@ -32,7 +32,7 @@
                 <div class="categorias" id="categorias"><i class="fa-solid fa-user"></i>
                     <ul>
                         <a href="Mis-ordenes.html"><li>Ver ordenes</li></a>
-                        <a href="index.html"><li>Cerrar sesion</li></a>
+                        <a href="index.html" onclick="logout()"><li>cerrar sesion</li></a>
                     </ul>  
                 </div>
                 <a href="carrito.html"><i class="fa-solid fa-cart-plus"></i></a>
@@ -362,10 +362,8 @@
         <div class="lapiz">
             <a href="../edicion.html"><i class="fa-solid fa-pencil"></i></a>
         </div>    
-        </div>
+    </div>
 
-</body>
-</html>
 
     <script src="js/scripts-pag-home.js"></script>
 </body>
