--- a/Mis-ordenes.html
+++ b/Mis-ordenes.html
@@ -26,9 +26,13 @@
                 </form>
             </div>
             <div class="links-container">
-                <a href="home.html"><span class="blanco">HOME</span></a>
+                <a href="home.php"><span class="blanco">HOME</span></a>
                 <a href="#redes-sociales"><span class="blanco">Redes</span></a>
-                <a href="#"><i class="fa-solid fa-user"></i></a>
+                <div class="categorias" id="categorias"><i class="fa-solid fa-user"></i>
+                    <ul>
+                        <a href="index.html" onclick="logout()"><li>cerrar sesion</li></a>
+                    </ul>  
+                </div>
                 <a href="carrito.html"><i class="fa-solid fa-cart-plus"></i></a>
             </div>
         </nav>
