--- a/edicion.html
+++ b/edicion.html
@@ -28,7 +28,7 @@
             </div>
 
             <div class="links-container">
-                <a href="home.html"><span class="blanco">HOME</span></a>
+                <a href="home.php"><span class="blanco">HOME</span></a>
                 <a href="#redes-sociales"><span class="blanco">Redes</span></a>
                 <a href="#" id="cuenta-link"><i class="fa-solid fa-user"></i></a>
                 <div id="opciones-cuenta" class="opciones-cuenta">
