--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
             <div class="links-container">
                 <a href="#redes">Redes</a>
-                <div class="categorias" id="categorias"><i class="fa-solid fa-user"></i>
+                <div class="categorias" id="categorias"><i class="fa-solid fa-user"></i>ingresar
                     <ul>
                         <a href="iniciar-sesion.html"><li>iniciar sesión</li></a>
                         <a href="registrarse.html"><li>Registrarse</li></a>
