--- a/Mis-ordenes.html
+++ b/Mis-ordenes.html
@@ -37,7 +37,7 @@
             </div>
         </nav>
     </header>
-
+    <!--EJEMPLO DE VERSE LOS PRODUCTOS-->
     <div class="container sec-1">
         <div class="item">
             <img src="img/kalimba-4.jpg">
