--- a/edicion.html
+++ b/edicion.html
@@ -52,7 +52,7 @@
                 <ul> 
                     <li data-category="guitarra">Guitarra</li> 
                     <li data-category="violin">Violín</li> 
-                    <li data-category="teclado">Teclado</li> 
+                    <li data-category="teclado">Teclados y pianos</li> 
                     <li data-category="tambor">Tambor</li> 
                 </ul> 
             </div>
