--- a/edicion.html
+++ b/edicion.html
@@ -31,7 +31,7 @@
                 <div id="opciones-cuenta" class="opciones-cuenta">
                     <a href="index.html">Cerrar Sesión</a>
                 </div>
-                <a href="carrito.html"><i class="fa-solid fa-cart-plus"></i></a>
+                <a href="carrito.php"><i class="fa-solid fa-cart-plus"></i></a>
             </div>
         </nav>
     </header>
